tf-website-01/securityGroup.tf
resource "aws_security_group" "allow_tls" {
    name = "allow_tls"
    description = "Allow TLS Inbound Traffic..."
    vpc_id = "vpc-0a1291dcd59ef0f82"

ingress {
	    description = "SSH"
	    from_port   = 22
	    to_port     = 22
	    protocol    = "tcp"
	    cidr_blocks = ["0.0.0.0/0"]
	  }
	

	  ingress {
	    description = "HTTP"
	    from_port   = 80
	    to_port     = 80
	    protocol    = "tcp"
	    cidr_blocks =  ["0.0.0.0/0"]
	  }

	  ingress {
	    description = "HTTPS"
	    from_port   = 443
	    to_port     = 443
	    protocol    = "tcp"
	    cidr_blocks = ["0.0.0.0/0"]
	  }

	  egress {
	    from_port   = 0
	    to_port     = 0
	    protocol    = "-1"
	    cidr_blocks = ["0.0.0.0/0"]
	  }
	
}
